ensure every template is entirely visible for every N tile display for non-hover and hover

--- a/express/blocks/shared/basic-carousel.css
+++ b/express/blocks/shared/basic-carousel.css
@@ -300,6 +300,22 @@ main .template-x .template.basic-carousel-element .button-container .media-wrapp
   main .template-x.four .basic-carousel-container .template.basic-carousel-element .button-container.singleton-hover {
     height: 276px;
   }
+  /* discover variant - one, two, three, four - image-wrapper img */
+  main .template-x.one.discover .basic-carousel-container .template.basic-carousel-element .still-wrapper .image-wrapper img,
+  main .template-x.two.discover .basic-carousel-container .template.basic-carousel-element .still-wrapper .image-wrapper img,
+  main .template-x.three.discover .basic-carousel-container .template.basic-carousel-element .still-wrapper .image-wrapper img,
+  main .template-x.four.discover .basic-carousel-container .template.basic-carousel-element .still-wrapper .image-wrapper img {
+    object-fit: fill;
+  }
+  /*  */
+  /* discover variant - one, two, three, four - button-container media-wrapper img */
+  main .template-x.one.discover .basic-carousel-container .template.basic-carousel-element .button-container .media-wrapper img,
+  main .template-x.two.discover .basic-carousel-container .template.basic-carousel-element .button-container .media-wrapper img,
+  main .template-x.three.discover .basic-carousel-container .template.basic-carousel-element .button-container .media-wrapper img,
+  main .template-x.four.discover .basic-carousel-container .template.basic-carousel-element .button-container .media-wrapper img {
+    object-fit: fill;
+  }
+  /*  */
   /* discover variant - one - singleton-hover */
   main .template-x.one.discover .basic-carousel-container .template.basic-carousel-element .button-container.singleton-hover {
     height: 704px;
